refuctor server