@@ -14,13 +14,18 @@ import java.lang.Thread;
 public class Server {
 
     private Database db;
-    private final int port;
     private final ConcurrentQueue<ClientHandler> clientQueue;
-    static int numberPlayers = 3;
+    static int numberPlayers = 2;
+    ServerSocket serverSocket = null;
 
     public Server(int port, int mode){
+        try{
+            this.serverSocket = new ServerSocket(port);
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+
         this.db = new Database();
-        this.port = port;
         this.clientQueue = switch (mode) {
             case 0 -> new SimpleQueue(numberPlayers);
             case 1 -> new RankedQueue(numberPlayers);
@@ -32,67 +37,43 @@ public class Server {
         ClientHandler ch = new ClientHandler(clientSocket, db);
         ch.run();
         // TODO
-        this.clientQueue.push(ch);
+        if (!ch.getUser().isEmpty()){
+            this.clientQueue.push(ch);
+        }
+        
+        System.out.print("In queue: ");
+        System.out.print(this.clientQueue.size());
+        System.out.println();
     }
 
     public void addGame() {
         if(this.clientQueue.has(numberPlayers)){
             List<ClientHandler> clients = clientQueue.popMultiple(numberPlayers);
-            clients.get(0).out.println("Hello\0");
-            Thread thread = new Thread(new GameHandler(clients));
-            thread.start();
-        }
-        System.out.println("In queue: ");
-        System.out.print(this.clientQueue.size());
-        System.out.println();
-    }
-
-    public void main() throws IOException {
-        ServerSocket serverSocket = new ServerSocket(port);
-        System.out.println("Server started. Waiting for clients...");
-        this.db = new Database();
-
-        while (true) {
-            Socket clientSocket = serverSocket.accept();
-            System.out.println("Client connected.");
-
-            // Start a new thread to handle the client
-            Thread thread = new Thread(() -> {
-                try {
-                    addClientHandler(clientSocket);
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
-                }
-            });
-            thread.start();
-            try {
-                thread.join();
-            } catch(InterruptedException e) {}
-
-            // addGame();
+            Thread.ofVirtual().start(new GameHandler(clients));
         }
     }
 
-    /*public void main() throws IOException {
-
-        Thread.ofVirtual().start(() -> {
+    public void main() throws IOException, InterruptedException {
+        Thread authThread = Thread.ofVirtual().start(() -> {
             try {
                 handleAuth();
             } catch (IOException e) {
                 e.printStackTrace();
             }
         });
-        Thread.ofVirtual().start(() -> handleGames());
-        Thread saveState = new Thread(() -> db.save());
+        Thread gameThread = Thread.ofVirtual().start(() -> handleGames());
+        Thread cleanUpThread = new Thread(() -> cleanUp());
 
-        Runtime.getRuntime().addShutdownHook(saveState);
+        Runtime.getRuntime().addShutdownHook(cleanUpThread);
 
         System.out.println("Server started");
-    }*/
+
+        authThread.join();
+        gameThread.join();
+    }
 
     public void handleAuth() throws IOException {
-        ServerSocket serverSocket = new ServerSocket(port);
-
+        
         while (true) {
             Socket clientSocket = serverSocket.accept();
             System.out.println("Client connected.");
@@ -112,6 +93,15 @@ public class Server {
     public void handleGames() {
         while (true) {
             addGame();
+        }
+    }
+
+    public void cleanUp() {
+        db.save();
+        try {
+            serverSocket.close();
+        } catch (IOException e) {
+            e.printStackTrace();
         }
     }
 }
